--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <h2>Merhabaaa</h2>
     </body>
-</html>>
+</html>
