--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/module2-solution/css/style.css">
     </head>
     <body>
         <h2 class="title">Our Menu</h2>
