--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/module2-solution/css/style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h2 class="title">Our Menu</h2>
         <div class="row">
            <div class="col-md-4">
-               <div class="box-include">
+               <div class="section">
                 <span class="box-title1">Chicken</span>
                 <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -30,7 +29,7 @@
                </div>
            </div>
            <div class="col-md-4">
-            <div class="box-include">
+            <div class="section">
                 <span class="box-title2">Beef</span>
                 <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -47,7 +46,7 @@
             </div>
             <div class="col-md-4 col-md-12">
                 
-               <div class="box-include">
+               <div class="section">
                 <span class="box-title3">Sushi</span>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
