--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2 class="title">Our Menu</h2>
         <div class="row">
            <div class="col-md-4">
-               <div class="section">
+               <div class="box-include">
                 <span class="box-title1">Chicken</span>
                 <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -29,7 +29,7 @@
                </div>
            </div>
            <div class="col-md-4">
-            <div class="section">
+            <div class="box-include">
                 <span class="box-title2">Beef</span>
                 <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4 col-md-12">
                 
-               <div class="section">
+               <div class="box-include">
                 <span class="box-title3">Sushi</span>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
